[package]
name = "theban-interval-tree"
version = "0.6.1"
authors = ["coco <coco@hexgolems.com>"]

description = "A simple Interval Tree implementation"

# These URLs point to more information about the repository
#documentation = "..."
repository = "https://github.com/theban/interval-tree"
#homepage = "..."

keywords = ["datastructure","interval", "tree", "map"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can
# be separated with a `/`
license = "GPL-2.0"

[dependencies]
rand = "*" # Or a specific version
time = "*"
memrange = "*"

#[dependencies.memrange]
#git = "https://github.com/theban/memrange"
#path = "../memrange"
