[package]
name = "theban-interval-tree"
version = "0.6.1"
authors = ["coco <coco@hexgolems.com>"]

description = "A simple Interval Tree implementation"

# These URLs point to more information about the repository
#documentation = "..."
repository = "https://github.com/theban/interval-tree"
#homepage = "..."

keywords = ["datastructure","interval", "tree", "map"]

license-file = "LICENSE"

[dependencies]
rand = "*" # Or a specific version
time = "*"
memrange = "*"

#[dependencies.memrange]
#git = "https://github.com/theban/memrange"
#path = "../memrange"
